# COM3528_2025_Team02

./: .gitignore  Monday at 15-47.m4a  README.md  full_env.yml  miro_audio
action/: DetectEmotion.action
com3528/: detect_human_speech.py  test.py
com3528/src/: basic_audio_text.py  comforting.py  detect_human_speech.py  soundLocaliser2.py  soundLocalizer.py  sound_localizer.py
com3528/src/Models/SER Model/Real-Time-Speech-Emotion-Recognition/: SER-Real_time.py
com3528/src/Models/Wave Model/w2v2-how-to/: German Model.txt  model_load_extra.py
com3528/src/Models/wave_model/w2v2/: model_load_extra.py
com3528_team02/: CMakeLists.txt  package.xml  sound_localizer.py
com3528_team02/action/: DetectEmotion.action
com3528_team02/src/: SL.py  SL2.py  SL3.py  basic_audio_text.py  comforting.py  detect_emotion_client.py  detect_emotion_server.py  kc.py  launch.launch  load_model.py  main.py  miro_audio.py  soundLocaliser2.py  soundLocalizer.py  test_audio.py
com3528_team02/src/Models/Wave Model/: Results.txt  Wave Model INFO.txt
com3528_team02/src/Models/Wave Model/w2v2-how-to/: final_model.py  model_load.py  setup_model.py
com3528_team02/src/Models/Wave Model/w2v2-how-to/Cache/w2v2/: -1033597102444974303.pkl  -7513606107877955125.pkl
com3528_team02/src/Models/wave_model/w2v2/: LICENSE  Model Info.txt  README.md  detect_emotion_client.py  detect_emotion_server.py  emotion_classifier.pkl  final_model.py  miro_model_one.py  model_load.py  model_load_extra.py  notebook.ipynb  requirements.txt  setup_model.py  train_classifier.py
com3528_team02/src/Models/wave_model/w2v2/tests/: requirements.txt
